Fix margins on mobile and tablet interfaces

--- a/style.css
+++ b/style.css
@@ -1,24 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
-
-.html {
+html {
     overflow-x: hidden;
-
 }
+
 
 /*desktop*/
 @media (min-width:1400px) {
-    .intro {
-        height: 60rem;
-        margin: 0;
-        width: 100svw;
-    }
+
 
     .hello {
         align-self: flex-start;
     }
-
-
 
     .intro-content {
         display: flex;
@@ -32,7 +25,10 @@
     body {
         font-size: 2rem;
     }
-
+    .intro-2{
+        padding: 4rem;
+        max-width: 1200px;
+    }
     .allcards {
         display: flex;
         margin: 3rem;
@@ -40,16 +36,15 @@
         justify-content: center;
         align-items: stretch;
         flex-wrap: wrap;
+        flex-basis:1500px;
         max-width: 1500px;
 
     }
 
     .content {
-        margin: 0rem 4rem;
-        display: flex;
+        margin: 0rem;
         display: flex;
         flex-direction: column;
-
         align-items: center;
     }
 
@@ -74,25 +69,30 @@
 }
 
 /*tablet*/
-@media (max-width:1400px) {
-    .intro {
-        height: 40rem;
-        margin: 0;
-    }
+@media (max-width:1400px) and (min-width:950px) {
+
 
     .hello {
         align-self: flex-start;
     }
 
-    .intro-content {
-        display: flex;
-        gap: 4rem;
-        height: 30rem;
-
-    }
 
     body {
         font-size: 1.5rem;
+
+    }
+
+    .intro-2 {
+        height: max-content;
+        margin: 3rem;
+        padding:3rem;
+        max-width:800px;
+        font-size: 1.2rem;
+
+    }
+    .intro-3 {
+        margin: 0rem;
+    
     }
 
     .allcards {
@@ -102,17 +102,17 @@
         justify-content: center;
         align-items: stretch;
         flex-wrap: wrap;
-        max-width: 1500px;
+        max-width: 800px;
 
     }
 
     .content {
-        margin: 4rem;
-        display: flex;
+        margin: 0rem;
         display: flex;
         flex-direction: column;
-
         align-items: center;
+        max-width:100vw;
+    
     }
 
     .view-work-button {
@@ -123,7 +123,7 @@
         border: 2px solid;
         border-radius: 10px;
         padding: 1rem 2rem;
-        margin-top: 4rem;
+        margin-top: 2rem;
     }
 
     .card .description {
@@ -134,11 +134,23 @@
 }
 
 /*mobile*/
-@media (max-width:1000px) {
+@media (max-width:950px) {
 
     .intro {
-        height: auto;
-        margin: 0;
+        height: 100dvh;
+        overflow: auto;
+
+    }
+    .intro-3 {
+        height: 100lvh;  
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        margin:0;
+
+    }
+    h1{
+        margin-bottom:0px;
     }
 
     .intro-content {
@@ -148,6 +160,16 @@
         margin: 1rem;
         height: auto;
     }
+    .intro-2 {
+        display: flex;
+        padding: 2rem;
+        margin:2rem 2rem 0rem 2rem;
+    }
+
+    .intro-text p {
+        margin: 0.5rem;
+    }
+
 
     .hello {
         align-self: flex-end;
@@ -156,6 +178,9 @@
 
     body {
         font-size: 1.2rem;
+        display:flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .view-work {
@@ -170,7 +195,7 @@
         border: 2px solid;
         border-radius: 5px;
         padding: .5rem 1rem;
-        margin-top: 1rem;
+
 
     }
 
@@ -185,13 +210,12 @@
         justify-content: center;
         align-items: stretch;
         flex-wrap: wrap;
-        max-width: 1500px;
+        max-width: 800px;
 
     }
 
     .content {
-        margin: 2rem;
-        display: flex;
+        margin: 0;
         display: flex;
         flex-direction: column;
 
@@ -205,12 +229,11 @@
 body {
     font-family: "Josefin Sans", sans-serif;
     font-weight: 300;
-    width: 100svw;
+    width: 100vw;
     margin: 0px;
     margin-top: 0px;
     background-color: #080015;
     color: #EEF2F6;
-
 
 
 
@@ -286,10 +309,9 @@ a:not(.view-work):hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100svh;
 
-    width: 100svw;
-
+    max-width: 100vw;
+    
 
 }
 
@@ -297,48 +319,58 @@ a:not(.view-work):hover {
 
 .intro {
     
+    display:flex;
+    min-height: 100dvh;
+    height: 100dvh;
+    max-height: 100dvh;
+    max-width: 100vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     overflow:hidden;
-    min-height: 100svh;
-    height: 100svh;
-    max-height: 100svh;
-    width: 100svw;
+   
 
+}
+.intro-3 {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height:100dvh;
 
 }
 .star-wrapper {
 
-    height: 100vh;
+    height: 100lvh;
+    min-height: 100lvh;
+    min-width:100vw;
+    max-width:100vw;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
     mask: linear-gradient(to bottom, 
     rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 40%, 
     rgba(0,0,0, 0) 95%, rgba(0,0,0, 0) 0
 ) 100% 50% / 100% 100% repeat-x;
-z-index: 1
+z-index: 1;
+position:absolute;
+top: 0;
+right:0;
+overflow:hidden;
+
 
 }
-.intro-3 {
-    min-height: 100svh;
-    width: 100svw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position:absolute;
-    top: 0
-}
+
 
 .intro-2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 1200px;
     background-color: rgb(8, 0, 21, 0.7);
-    padding: 4rem;
     border-radius: 30px;
     z-index: 999;
-    position:relative ;
-    mask:unset;
+
+ 
 
 }
 
@@ -374,12 +406,11 @@ z-index: 1
 
 
 .portfolio {
-    min-height: 100svh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    scroll-snap-align: start;
 }
 
 .intro-links {
@@ -410,7 +441,7 @@ z-index: 1
 
 .card h3 {
     margin-top: 0px;
-    color: #FFE613
+
 }
 
 .card img {
@@ -419,14 +450,18 @@ z-index: 1
     min-width: 0;
 }
 
+
 .footer {
     background-color:#1b2735;
-
-    padding: 4rem;
-    width: 100vw;
-    scroll-snap-align: start;
+    padding:  4rem 0px;
+    margin:0px;
+    max-width: 100vw;
+    min-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.5rem;
+    left:0;
+
+
 }
